--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "expo": "~53.0.20",
+    "expo-application": "~6.1.5",
     "expo-asset": "~11.1.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
@@ -28,7 +29,9 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-localization": "~16.1.6",
     "expo-router": "~5.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -39,14 +42,15 @@
     "react-native": "0.79.5",
     "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-chat": "^2.8.1",
+    "react-native-htmlview": "^0.17.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-typing-animation": "^0.1.7",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-application": "~6.1.5",
-    "expo-localization": "~16.1.6"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
