--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -23,6 +23,7 @@
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-device": "^7.1.4",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
@@ -44,6 +45,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-htmlview": "^0.17.0",
+    "react-native-keyboard-controller": "^1.18.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -55,6 +57,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-htmlview": "^0.16.6",
+    "@types/react-native-typing-animation": "^0.1.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "react-native-svg-transformer": "^1.5.1",
