--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "react-native-svg": "15.11.2",
     "react-native-typing-animation": "^0.1.7",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "uuid": "^11.1.0",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
