--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-native": "0.79.5",
     "react-native-collapsible": "^1.6.2",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-htmlview": "^0.17.0",
     "react-native-keyboard-controller": "^1.18.5",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -53,8 +55,7 @@
     "react-native-typing-animation": "^0.1.7",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "uuid": "^11.1.0",
-    "react-native-get-random-values": "~1.11.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
